--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viur-vue-utils",
+  "name": "@viur/viur-vue-utils",
   "version": "0.5.0",
   "private": true,
   "description": "Some ViUR related vue3 utils",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/XeoN-GHMB/viur-vue-utils#readme",
   "dependencies": {
-    "pinia": "^2.0.18",
+    "pinia": "^2.0.20",
     "vue": "^3.2.37"
   }
 }
