--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/viur-framework/viur-vue-utils#readme",
   "dependencies": {
-    "pinia": "^2.0.34",
-    "vue": "^3.2.47"
+    "pinia": "^2.1.3",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
+    "vue-json-pretty": "^2.2.4"
   }
 }
