@WIP delete multiple & some translations

--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -13,7 +13,8 @@
   "contributors": [
     "Tilman Oestereich",
     "Arne Gudermann",
-    "Kadir Balku"
+    "Kadir Balku",
+    "Claudia Dietrich"
   ],
   "license": "MIT",
   "bugs": {
