--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/viur-framework/viur-vue-utils#readme",
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@viur/ckeditor5-build-classic": "^1.0.0-v38.0.1",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
