--- a/package.json
+++ b/package.json
@@ -23,6 +23,16 @@
   },
   "homepage": "https://github.com/XeoN-GHMB/viur-vue-utils#readme",
   "devDependencies": {
-    "typescript": "^4.9.3"
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.15.1",
+    "prettier": "^3.0.0",
+    "typescript": "^4.9.5"
   }
 }
