--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,13 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["standard-with-typescript", "plugin:vue/vue3-essential"],
+  "extends": ["standard-with-typescript", "plugin:vue/vue3-essential", "plugin:prettier/recommended"],
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "parser": "@typescript-eslint/parser"
   },
+
   "plugins": ["vue", "prettier"],
   "rules": {
     "prettier/prettier": "error"
