--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/XeoN-GHMB/viur-vue-utils#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
