--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@viur/viur-vue-utils",
-  "version": "0.7.0-rc.18",
+  "name": "@viur/vue-utils",
+  "version": "0.7.0",
   "description": "Some ViUR related vue3 utils",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
