--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -25,9 +25,10 @@
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@viur/ckeditor5-build-classic": "^1.0.1-v38.0.1",
     "pinia": "^2.1.4",
+    "prism-code-editor": "^2.2.3",
+    "style-mod": "^4.1.0",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2",
-    "vue-json-pretty": "^2.2.4"
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
@@ -40,7 +41,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "postcss-custom-media": "^10.0.0",
     "postcss-nesting": "^12.0.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.1.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.1.6",
