--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viur/vue-utils",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Some ViUR related vue3 utils",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@viur/ckeditor5-build-classic": "^1.0.1-v38.0.1",
+    "@vueuse/core": "^10.7.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
