--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@viur/ckeditor5-build-classic": "^1.0.2-v38.0.1",
+    "@viur/vue-components": "^1.2.4",
     "@vueuse/core": "^10.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
