--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -26,10 +26,14 @@
     "@viur/ckeditor5-build-classic": "^1.0.2-v38.0.1",
     "@viur/vue-components": "^1.2.4",
     "@vueuse/core": "^10.7.0",
+    "babel": "^6.23.0",
+    "highlight.js": "^11.9.0",
     "pinia": "^2.1.7",
+    "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.1",
-    "vue-json-pretty": "^2.2.4"
+    "vue-json-pretty": "^2.2.4",
+    "vue-prism-editor": "^2.0.0-alpha.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
