--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "private": true,
+  "version": "2.0.0-beta.2",
+  "type": "module",
   "scripts": {
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "node scripts/release.js"
+  },
+  "devDependencies": {
+    "enquirer": "^2.4.1",
+    "execa": "^9.1.0",
+    "minimist": "^1.2.8",
+    "picocolors": "^1.0.1",
+    "semver": "^7.6.2"
   }
 }
