--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@viur/vue-utils",
-  "version": "2.0.0-dev1",
+  "version": "2.0.0-beta",
   "description": "Some ViUR related vue3 utils",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/viur-framework/viur-vue-utils.git"
