--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viur/vue-utils",
-  "version": "2.0.0-beta",
+  "version": "2.0.0-beta.7",
   "description": "Some ViUR related vue3 utils",
   "repository": {
     "type": "git",
