--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "node scripts/release.js",
-    "release-dry": "node scripts/release.js --dry"
+    "release-dry": "node scripts/release.js --dry",
+    "changelog": "conventional-changelog -i CHANGELOG.md -s"
   },
   "engines": {
     "node": ">=20.5"
   },
   "devDependencies": {
+    "conventional-changelog-cli": "^5.0.0",
     "enquirer": "^2.4.1",
     "execa": "^9.1.0",
     "minimist": "^1.2.8",
