--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "node scripts/release.js",
     "release-dry": "node scripts/release.js --dry",
-    "changelog": "conventional-changelog -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -i CHANGELOG.md -s",
+    "lint": "eslint --cache",
+    "format": "prettier --write --cache ."
   },
   "engines": {
     "node": ">=20.5"
@@ -13,6 +15,10 @@
   "devDependencies": {
     "conventional-changelog-cli": "^5.0.0",
     "enquirer": "^2.4.1",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "execa": "^9.1.0",
     "minimist": "^1.2.8",
     "picocolors": "^1.0.1",
