--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,18 +15,18 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install --prefix=src
-    #- run: npm run build
-    - uses: JS-DevTools/npm-publish@v1
-      with:
-        access: "public"
-        token: ${{ secrets.NPM_TOKEN }}
-        package: ./src/package.json
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm install --prefix=src
+      #- run: npm run build
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          access: "public"
+          token: ${{ secrets.NPM_TOKEN }}
+          package: ./src/package.json
