--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "release": "node scripts/release.js",
     "release-dry": "node scripts/release.js --dry",
     "changelog": "conventional-changelog -i CHANGELOG.md -s",
-    "lint": "eslint --cache",
-    "format": "prettier --write --cache ."
+    "lint": "prettier --write . && eslint --fix",
+    "check": "prettier -c . && eslint --quiet"
   },
   "engines": {
     "node": ">=20.5"
