--- a/src/package.json
+++ b/src/package.json
@@ -18,30 +18,12 @@
   "homepage": "https://github.com/viur-framework/viur-vue-utils#readme",
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "@viur/ckeditor5-build-classic": "^1.0.2-v38.0.1",
-    "@viur/vue-components": "^1.2.4",
-    "@vueuse/core": "^10.7.0",
+    "@viur/ckeditor5-build-classic": "^1.0.3-v38.0.1",
+    "@vueuse/core": "^10.10.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.15",
-    "vue-i18n": "^9.9.1",
-    "vue-json-pretty": "^2.2.4"
+    "vue": "^3.4.27",
+    "vue-i18n": "^9.13.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "postcss-custom-media": "^10.0.0",
-    "postcss-nesting": "^12.0.0",
-    "prettier": "^3.0.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "typescript": "^5.1.6",
-    "vite": "^5.2.8",
-    "vue-tsc": "^1.8.5"
   }
 }
