--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viur/vue-utils",
-  "version": "1.7.9-0",
+  "version": "1.7.9",
   "description": "Some ViUR related vue3 utils",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
