--- a/packages/viur-vue-utils/package.json
+++ b/packages/viur-vue-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viur/vue-utils",
-  "version": "1.7.23",
+  "version": "1.7.24",
   "description": "Some ViUR related vue3 utils",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,33 +23,30 @@
   "homepage": "https://github.com/viur-framework/viur-vue-utils#readme",
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "@viur/ckeditor5-build-classic": "^1.0.2-v38.0.1",
+    "@viur/ckeditor5-build-classic": "^1.0.3-v38.0.1",
     "@viur/vue-components": "^1.2.4",
-    "@vueuse/core": "^10.7.0",
-    "install": "^0.13.0",
-    "libphonenumber-js": "^1.11.9",
+    "@vueuse/core": "^12.4.0",
+    "libphonenumber-js": "^1.11.17",
     "logics-js": "^0.3.9",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.15",
-    "vue-i18n": "^9.9.1",
-    "vue-json-pretty": "^2.2.4"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
+    "vue-json-pretty": "^2.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.15.1",
-    "postcss-custom-media": "^10.0.0",
-    "postcss-nesting": "^12.0.0",
-    "prettier": "^3.0.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "typescript": "^5.1.6",
-    "vite": "^5.2.8",
-    "vue-tsc": "^2.1.6"
+    "postcss-custom-media": "^11.0.5",
+    "postcss-nesting": "^13.0.1",
+    "prettier": "^3.4.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7"
   }
 }
