--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,7 +24,7 @@ jobs:
         cache-dependency-path: src/package-lock.json
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install --prefix=src
+    - run: npm ci --prefix=src
     #- run: npm run build
     - uses: JS-DevTools/npm-publish@v3
       with:
