--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "@viur/ckeditor5-build-classic": "^1.0.3-v38.0.1",
     "@vueuse/core": "^12.4.0",
     "destr": "^2.0.3",
+    "json-editor-vue": "^0.18.1",
     "libphonenumber-js": "^1.11.17",
     "logics-js": "^0.3.9",
     "pinia": "^2.3.0",
