--- a/src/package.json
+++ b/src/package.json
@@ -31,8 +31,10 @@
     "logics-js": "^0.3.9",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-i18n": "^11.0.1",
-    "vue-json-pretty": "^2.4.0"
+    "vue-json-pretty": "^2.4.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
