--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@viur/vue-utils",
   "version": "3.1.7",
+  "type": "module",
   "description": "Some ViUR related vue3 utils",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "node ../scripts/lint.mjs",
+    "check": "node ../scripts/check.mjs"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,9 @@
     "Claudia Dietrich"
   ],
   "license": "MIT",
+  "engines": {
+    "node": ">=22.12"
+  },
   "bugs": {
     "url": "https://github.com/viur-framework/viur-vue-utils/issues"
   },
@@ -37,19 +42,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "eslint": "^9.17.0",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "postcss-custom-media": "^11.0.5",
     "postcss-nesting": "^13.0.1",
-    "prettier": "^3.4.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.14.0",
-    "typescript": "^5.7.3",
+    "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^6.0.7"
   }
 }
