--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,16 +19,36 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           cache-dependency-path: src/package-lock.json
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+
       - run: npm ci --prefix=src
-      #- run: npm run build
-      - uses: JS-DevTools/npm-publish@v3
+
+      - name: Determine npm tag
+        id: npm_tag
+        run: |
+          TAG_NAME="${GITHUB_REF_NAME}"
+          echo "Detected tag: $TAG_NAME"
+
+          if [[ "$TAG_NAME" =~ -alpha[0-9]*$ ]]; then
+            echo "tag=alpha" >> $GITHUB_OUTPUT
+          elif [[ "$TAG_NAME" =~ -beta[0-9]*$ ]]; then
+            echo "tag=beta" >> $GITHUB_OUTPUT
+          elif [[ "$TAG_NAME" =~ -rc[0-9]*$ ]]; then
+            echo "tag=rc" >> $GITHUB_OUTPUT
+          else
+            echo "tag=latest" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Publish to npm
+        uses: JS-DevTools/npm-publish@v3
         with:
           access: "public"
           token: ${{ secrets.NPM_TOKEN }}
           package: ./src/package.json
+          tag: ${{ steps.npm_tag.outputs.tag }}
