--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/viur-framework/viur-vue-utils.git"
+    "url": "https://github.com/viur-framework/viur-vue-utils"
   },
   "author": "Andreas H. Kelch",
   "contributors": [
